# Low-Cost-Force-Sensing-System

./: README.md
CAD Projects/: case_battery.prt.4  case_bracelet.prt.4  debug_feat_recognition.txt.1  fsr_adapter_v2.prt.1  lid_bracelet.prt.1  std.out
PCB project/: pcb_bracelet.pdsprj
PCB project/File to print the PCB using a CNC machine/: pcb_bracelet - CADCAM Bottom Assembly.GBR  pcb_bracelet - CADCAM Bottom Copper.GBR  pcb_bracelet - CADCAM Bottom Silk Screen.GBR  pcb_bracelet - CADCAM Bottom Solder Resist.GBR  pcb_bracelet - CADCAM Drill TOP-BOT Plated.GBR  pcb_bracelet - CADCAM Mechanical 1.GBR  pcb_bracelet - CADCAM Netlist.IPC  pcb_bracelet - CADCAM READ-ME.TXT  pcb_bracelet - CADCAM Top Assembly.GBR  pcb_bracelet - CADCAM Top Copper.GBR  pcb_bracelet - CADCAM Top Silk Screen.GBR  pcb_bracelet - CADCAM Top Solder Resist.GBR
ROS2 package/: ROS codes.txt
ROS2 package/bracelet_ws/src/: README.md
ROS2 package/bracelet_ws/src/rrbot_bringup/: CMakeLists.txt  package.xml
ROS2 package/bracelet_ws/src/rrbot_bringup/config/: rrbot_controllers.yaml
ROS2 package/bracelet_ws/src/rrbot_bringup/launch/: rrbot.launch.py
ROS2 package/bracelet_ws/src/rrbot_controllers/rrbot_idyn_controller/: CMakeLists.txt  controller_plugin.xml  package.xml
ROS2 package/bracelet_ws/src/rrbot_controllers/rrbot_idyn_controller/include/rrbot_idyn_controller/: rrbot_idyn_controller.hpp  visibility_control.h
ROS2 package/bracelet_ws/src/rrbot_controllers/rrbot_idyn_controller/src/: rrbot_idyn_controller.cpp
ROS2 package/bracelet_ws/src/rrbot_controllers/rrbot_pdg_controller/: CMakeLists.txt  controller_plugin.xml  package.xml
ROS2 package/bracelet_ws/src/rrbot_controllers/rrbot_pdg_controller/include/rrbot_pdg_controller/: rrbot_pdg_controller.hpp  visibility_control.h
ROS2 package/bracelet_ws/src/rrbot_controllers/rrbot_pdg_controller/src/: rrbot_pdg_controller.cpp
ROS2 package/bracelet_ws/src/rrbot_description/: CMakeLists.txt  package.xml
ROS2 package/bracelet_ws/src/rrbot_description/ros2_control/: rrbot.ros2_control.xacro
ROS2 package/bracelet_ws/src/rrbot_description/rviz/: rrbot.rviz
ROS2 package/bracelet_ws/src/rrbot_description/urdf/: rrbot.urdf.xacro  rrbot_description.urdf.xacro
ROS2 package/bracelet_ws/src/rrbot_hardware/: CMakeLists.txt  hardware_plugin.xml  package.xml
ROS2 package/bracelet_ws/src/rrbot_hardware/include/rrbot_hardware/: rrbot.hpp  visibility_control.h
ROS2 package/bracelet_ws/src/rrbot_hardware/src/: rrbot.cpp
ROS2 package/bracelet_ws/src/rrbot_nodes/: CMakeLists.txt  package.xml
ROS2 package/bracelet_ws/src/rrbot_nodes/scripts/: read_fsr.py  trajectory_publisher.py
Setup Type of Communication Code/: setup_bracelet.py
microcontroller_ESP32_codes/initial_setup/: initial_setup.ino
microcontroller_ESP32_codes/main_code_bracelet/: main_code_bracelet.ino
